--- a/practice/5.html
+++ b/practice/5.html
@@ -10,12 +10,17 @@
       // スクリーン解像度がresolutionにピクセル単位で入ってくる
       precision mediump float;
       uniform float time;
-      uniform vec2  resolution;
+      uniform vec2 resolution;
 
-      void main(void) {
-        vec2 p = (gl_FragCoord.xy * 2.0 - resolution) / min(resolution.x, resolution.y); // 正規化
-        float l = 0.1 / length(p);
-        gl_FragColor = vec4(vec3(l), 1.0);
+      void main(void){
+        vec2 p = (gl_FragCoord.xy * 2.0 - resolution) / min(resolution.x, resolution.y);
+        vec3 destColor = vec3(0.0);
+        for(float i = 0.0; i < 5.0; i++){
+            float j = i + 1.0;
+            vec2 q = p + vec2(cos(time * j), sin(time * j)) * 0.5;
+            destColor += 0.05 / length(q);
+        }
+        gl_FragColor = vec4(destColor, 1.0);
       }
     </script>
     <!-- 頂点シェーダのソースコード -->
@@ -44,6 +49,6 @@
     <div id="app">
       <canvas id="canvas"></canvas>
     </div>
-    <script src="./script/script.js" type="module"></script>
+    <script src="./script/script.js"></script>
   </body>
 </html>
